# Calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: grammary.cpp  grammary.h  namespace.h  token.cpp  token.h  variables.cpp  variables.h
